# The-Rainbow-Steiner-Tree-Problem

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Edge.hpp  Graph.hpp  Node.hpp  Solution.hpp  Structures.hpp  TestModule.hpp  defines.hpp  helpers.hpp  read.hpp
instances/B/: b12.stp  b18.stp
instances/I080/: i080-001.stp  i080-002.stp  i080-003.stp  i080-004.stp  i080-005.stp  i080-011.stp  i080-012.stp  i080-013.stp  i080-014.stp  i080-015.stp  i080-021.stp  i080-022.stp  i080-023.stp  i080-024.stp  i080-025.stp  i080-031.stp  i080-032.stp  i080-033.stp  i080-034.stp  i080-035.stp  i080-041.stp  i080-042.stp  i080-043.stp  i080-044.stp  i080-045.stp  i080-101.stp  i080-102.stp  i080-103.stp  i080-104.stp  i080-105.stp  i080-111.stp  i080-112.stp  i080-113.stp  i080-114.stp  i080-115.stp  i080-121.stp  i080-122.stp  i080-123.stp  i080-124.stp  i080-125.stp  (+60 more)
instances/MSM/: msm0580.stp  msm0654.stp  msm0709.stp  msm0920.stp  msm1008.stp  msm1234.stp  msm1477.stp  msm1707.stp  msm1844.stp  msm1931.stp  msm2000.stp  msm2152.stp  msm2326.stp  msm2492.stp  msm2525.stp  msm2601.stp  msm2705.stp  msm2802.stp  msm3277.stp  msm3676.stp  msm3727.stp  msm3829.stp  msm4038.stp  msm4114.stp  msm4312.stp  msm4414.stp  msm4515.stp
instances/P4Z/: p401.stp  p402.stp  p404.stp  p405.stp  p406.stp
source/: Edge.cpp  Graph.cpp  Node.cpp  Solution.cpp  read.cpp
